adiciona configuração do serviço e implantação para a API Fast Food, atualiza variáveis e remove arquivos obsoletos

--- a/kubernetes-app/k8s/configmaps/app-config.yaml
+++ b/kubernetes-app/k8s/configmaps/app-config.yaml
@@ -1,4 +1,3 @@
-# kubernetes-app/k8s/configmaps/app-config.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -7,12 +6,8 @@ metadata:
 data:
   NODE_ENV: "production"
   PORT: "3000"
-  API_VERSION: "v1"
+  DYNAMODB_CLIENTS_TABLE: ""
+  DYNAMODB_PRODUCTS_TABLE: ""
+  DYNAMODB_ORDERS_TABLE: ""
+  AUTH_API_URL: ""
   AWS_REGION: "us-east-1"
-  CORS_ALLOWED_ORIGINS: "*"
-  PEDIDO_STATUS_INICIAL: "Recebido"
-  PEDIDO_STATUS_PREPARACAO: "Em preparação"
-  PEDIDO_STATUS_PRONTO: "Pronto"
-  PEDIDO_STATUS_FINALIZADO: "Finalizado"
-  HEALTH_CHECK_INTERVAL: "30000"
-  LOG_LEVEL: "info"
