--- a/kubernetes-app/package.json
+++ b/kubernetes-app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "project2",
+  "name": "fastfood-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/server.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "init-db": "node init-db.js",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest"
@@ -16,18 +16,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.716.0",
-    "@aws-sdk/lib-dynamodb": "^3.716.0",
-    "aws-sdk": "^2.1692.0",
-    "express": "^4.17.1",
+    "@aws-sdk/client-dynamodb": "^3.772.0",
+    "@aws-sdk/lib-dynamodb": "^3.772.0",
+    "aws-sdk": "^2.1450.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^7.0.0"
   }
 }
